--- a/pages/index.html
+++ b/pages/index.html
@@ -342,14 +342,14 @@
             <div>
                 <h1>Happy<span class="red">End</span></h1>
 
-                <p class="txtFooterMarginTop">Transformando ideias em soluções digitais. Prepare-se para o<br>Projeto
+                <p class="txtFooterMarginTop">Transformando ideias em soluções digitais. Prepare-se para o Projeto
                     final da primeira Turma de
                     Desenvolvimento de Sistemas.</p>
 
                 <p class="poppinsLight">- Turma SENAI - Ferraz de Vasconcelos 2024</p>
             </div>
 
-            <div class="nav-footer">
+            <div class="nav-footer underInfoFooter">
                 <p class="poppinsLight">Seções</p>
 
                 <div class="nav-links footerLinks">
@@ -366,7 +366,7 @@
         <div class="marginPagina footerSection">
             <p>© SENAI Luis Eulalio de Bueno Vidigal Filho</p>
 
-            <div class="nav-links iconsSocials ">
+            <div class="nav-links iconsSocials underInfoFooter">
                 <a class="socialIcon" href="https://www.facebook.com/senaisp.suzano/" target="_blank">
                     <img src="../images/icons/facebook.png">
                 </a>
