--- a/pages/index.html
+++ b/pages/index.html
@@ -111,7 +111,7 @@
                                 <h3 class="classe">3ºA</h3>
                             </div>
 
-                            <div>
+                            <div class="dataContainer">
                                 <h1 class="data">04</h1>
                                 <div class="mes">
                                     <h3 class="dezembro">De Dezembro</h3>
@@ -128,7 +128,7 @@
                             <div class="boxSalaCalendar">
                                 <h3 class="classe">3ºB</h3>
                             </div>
-                            <div>
+                            <div class="dataContainer">
                                 <h1 class="data">06</h1>
                                 <div class="mes">
                                     <h3 class="dezembro">De Dezembro</h3>
@@ -155,119 +155,7 @@
 
 
         <!-- projetos -->
-        <section id="projetos-section" class="calendarBase">
-
-            <div class="conteiner_titulo">
-
-                <div class="caixa-titulo">
-                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" height="100%" width="100%">
-
-                        <line x1="0%" y1="0%" x2="90%" y2="0%" style="stroke:#fff;stroke-width:2"></line>
-                        <line x1="0%" y1="0%" x2="0%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
-                    </svg>
-
-                    <h1 class="titleSVG-align poppinsBold">Projetos</h1>
-
-                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" height="100%" width="100%">
-
-                        <line x1="10%" y1="0%" x2="100%" y2="0%" style="stroke:#fff;stroke-width:2"></line>
-                        <line x1="100%" y1="0%" x2="100%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
-                    </svg>
-                </div>
-
-                <div class="caixa-texto">
-
-                    <svg class="linhasSVG" width="1" height="200">
-                        <!-- Linha vertical no lado direito -->
-                        <line x1="0" y1="0" x2="0" y2="100%" style="stroke:#ffffff;stroke-width:2"></line>
-                    </svg>
-
-                    <div class="textoTitulo">Conheça projetos inovadores de nossos alunos</div>
-
-                    <svg class="linhasSVG" width="1" height="200">
-                        <!-- Linha vertical no lado direito -->
-                        <line x1="0" y1="0" x2="0" y2="100%" style="stroke:#ffffff;stroke-width:2"></line>
-                    </svg>
-
-                </div>
-
-            </div>
-
-            <div class="carrosselContainer">
-                <div class="carrossel">
-
-                    <div class="slide active">
-
-                        <div class="conteudo_slide">
-
-                            <h1 class="titulo">Integrity</h1>
-                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                                integer
-                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
-                                Est
-                                porttitor risus amet sit id.</p>
-                        </div>
-
-
-                        <img src="../images/imagem1.png" alt="" />
-
-                    </div>
-
-                    <div class="slide prev">
-
-                        <div class="conteudo_slide">
-
-                            <h1 class="titulo">Integrity</h1>
-                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                                integer
-                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
-                                Est
-                                porttitor risus amet sit id.</p>
-                        </div>
-
-
-                        <img src="../images/imagem2.png" alt="" />
-
-                    </div>
-
-                    <div class="slide next">
-
-                        <div class="conteudo_slide">
-
-                            <h1 class="titulo">Integrity</h1>
-                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                                integer
-                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
-                                Est
-                                porttitor risus amet sit id.</p>
-                        </div>
-
-
-                        <img src="../images/imagem3.png" alt="" />
-
-                    </div>
-
-                    <div class="slide out">
-
-                        <div class="conteudo_slide">
-
-                            <h1 class="titulo">Integrity</h1>
-                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                                integer
-                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
-                                Est
-                                porttitor risus amet sit id.</p>
-                        </div>
-
-
-                        <img src="../images/imagem4.png" alt="" />
-
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
+ 
 
 
         <!-- professores homenagem -->
