--- a/pages/index.html
+++ b/pages/index.html
@@ -156,10 +156,10 @@
                                     </div>
                                 </div>
 
-                                <button class="btn">
+                                <!-- <button class="btn">
                                     <img src="../images/icons/iconCalendario.png" class="iconInvert">
                                     <p class="txtBtn">Agendar Evento</p>
-                                </button>
+                                </button> -->
                             </div>
 
                             <div class="calendarBox calendarBoxRight">
@@ -173,10 +173,10 @@
                                     </div>
                                 </div>
 
-                                <button class="btn">
+                                <!-- <button class="btn">
                                     <img src="../images/icons/iconCalendario.png" class="iconInvert">
                                     <p class="txtBtn">Agendar Evento</p>
-                                </button>
+                                </button> -->
 
                             </div>
                         </div>
