--- a/pages/index.html
+++ b/pages/index.html
@@ -111,90 +111,80 @@
 
 
 
-            <!-- calendário datas eventos -->
-            <section id="dataEventos-section" class="calendarBase">
-
-                <div class="titleSection">
-                    <div class="titleSVG-align">
-                        <p class="tituloInfo">Informações da</p>
-                    </div>
-
-
-
-                    <svg class="linhasSVG linhasSVG-horizontal" width="100%">
-                        <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
-                        <line x1="0%" y1="0" x2="35%" y2="0" style="stroke:#fff;stroke-width:2" />
-                        <line x1="65%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
-                    </svg>
-                </div>
-
-
-
-
-                <div class="calendarDaysSVG-alignment">
-                    <svg class="linhasSVG-vertical" width="50" height="550">
-                        <!-- Linha vertical no lado esquerdo -->
-                        <line x1="0%" y1="0" x2="0%" y2="90%" style="stroke:#fff;stroke-width:2" />
-                        <line x1="0%" y1="90%" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
-                    </svg>
-
-
-                    <div class="calendarMainContent">
-                        <div class="titleSVG-align">
-                            <h1 class="poppinsBold">Apresentação</h1>
-                        </div>
-                        <div class="calendarContainer">
-                            <div class="calendarBox calendarBoxLeft">
-                                <div class="boxSalaCalendar">
-                                    <h3 class="classe">Parte 1</h3>
-                                </div>
-
-                                <div class="dataContainer">
-                                    <h1 class="data">03</h1>
-                                    <div class="mes">
-                                        <h3 class="dezembro">De Dezembro</h3>
-                                    </div>
-                                </div>
-
-                                <!-- <button class="btn">
-                                    <img src="../images/icons/iconCalendario.png" class="iconInvert">
-                                    <p class="txtBtn">Agendar Evento</p>
-                                </button> -->
-                            </div>
-
-                            <div class="calendarBox calendarBoxRight">
-                                <div class="boxSalaCalendar">
-                                    <h3 class="classe">Parte 2</h3>
-                                </div>
-                                <div class="dataContainer">
-                                    <h1 class="data">10</h1>
-                                    <div class="mes">
-                                        <h3 class="dezembro">De Dezembro</h3>
-                                    </div>
-                                </div>
-
-                                <!-- <button class="btn">
-                                    <img src="../images/icons/iconCalendario.png" class="iconInvert">
-                                    <p class="txtBtn">Agendar Evento</p>
-                                </button> -->
-
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <svg class="linhasSVG linhasSVG-vertical" width="50" height="550">
-                        <!-- Linha vertical no lado direito -->
-                        <line x1="100%" y1="0" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
-                        <line x1="0%" y1="90%" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
-                    </svg>
-                </div>
-            </section>
 
 
             <div id="fullscreenOverlay" class="fullscreen-overlay">
                 <button id="closeFullscreen" class="close-fullscreen">×</button>
                 <img id="fullscreenImage" class="fullscreen-image" src="" alt="Imagem em tela cheia">
+            </div>
+        </section>
+
+        <!-- calendário datas eventos -->
+        <section id="dataEventos-section" class="calendarBase">
+
+            <div class="titleSection">
+                <div class="titleSVG-align">
+                    <p class="tituloInfo">Informações da</p>
+                </div>
+
+
+
+                <svg class="linhasSVG linhasSVG-horizontal" width="100%">
+                    <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
+                    <line x1="0%" y1="0" x2="35%" y2="0" style="stroke:#fff;stroke-width:2" />
+                    <line x1="65%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
+                </svg>
+            </div>
+
+
+
+
+            <div class="calendarDaysSVG-alignment">
+                <svg class="linhasSVG-vertical" width="50" height="550">
+                    <!-- Linha vertical no lado esquerdo -->
+                    <line x1="0%" y1="0" x2="0%" y2="75%" style="stroke:#fff;stroke-width:2" />
+                    <line x1="0%" y1="75%" x2="100%" y2="75%" style="stroke:#fff;stroke-width:2" />
+                </svg>
+
+
+                <div class="calendarMainContent">
+                    <div id="titleApresArea" class="titleSVG-align">
+                        <h1 id="apresTitle" class="poppinsBold">Apresentação</h1>
+                    </div>
+                    <div class="calendarContainer">
+                        <div class="calendarBox calendarBoxLeft">
+                            <div class="boxSalaCalendar">
+                                <h3 class="classe">Parte 1</h3>
+                            </div>
+
+                            <div class="dataContainer">
+                                <h1 class="data">03</h1>
+                                <div class="mes">
+                                    <h3 class="dezembro">De Dezembro</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="calendarBox calendarBoxRight">
+                            <div class="boxSalaCalendar">
+                                <h3 class="classe">Parte 2</h3>
+                            </div>
+                            <div class="dataContainer">
+                                <h1 class="data">10</h1>
+                                <div class="mes">
+                                    <h3 class="dezembro">De Dezembro</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <svg class="linhasSVG linhasSVG-vertical" width="50" height="550">
+                    <!-- Linha vertical no lado direito -->
+                    <line x1="100%" y1="0" x2="100%" y2="75%" style="stroke:#fff;stroke-width:2" />
+                    <line x1="0%" y1="75%" x2="100%" y2="75%" style="stroke:#fff;stroke-width:2" />
+                </svg>
             </div>
         </section>
 
