--- a/pages/index.html
+++ b/pages/index.html
@@ -67,29 +67,24 @@
             </a>
         </section>
 
-        <!-- <section id="video" class="video-wrapper">
-            <iframe id="youtubeVideo" src="https://www.youtube.com/embed/GB4PyMfl8QA?si=-vslKi2rVu5z-h1l"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
-        </section> -->
-
-
-
         <!-- projetos -->
         <section id="projetos">
-            <h1 class="titleSVG-align poppinsBold">Projetos</h1>
-            <div class="carousel">
 
+            <div id="boxProjControls">
                 <!-- Botão de alternância -->
                 <label class="switch">
                     <input type="checkbox" id="toggleImagesBtn">
                     <span class="slider round"></span>
                 </label>
 
-                <span id="dayLabel">Dia1</span>
+                <h1 id="projetos-title" class="titleSVG-align poppinsBold">Projetos</h1>
 
+                <span id="dayLabel">Dia1</span>
+            </div>
+
+
+
+            <div class="carousel">
                 <div class="caroussel-container">
                     <input type="radio" name="slide" id="c1" checked>
                     <label for="c1" class="card"></label>
@@ -272,7 +267,7 @@
 
                 <div class="nav-links footerLinks">
                     <a href="#dataEventos-section">Datas</a>
-                    <a href="#projetos-section">Projetos</a>
+                    <a href="#projetos">Projetos</a>
                     <a href="#professores-section">Professores</a>
                     <a href="#location">Localização</a>
                 </div>
