--- a/pages/index.html
+++ b/pages/index.html
@@ -38,8 +38,8 @@
     <div class="header">
         <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
         <div class="nav-links nav-linksHeader">
-            <a href="#dataEventos-section">Datas</a>
             <a href="#projetos">Projetos</a>
+            <a href="#dataEventos-section">Datas</a>
             <a href="#professores-section">Professores</a>
             <a href="#location">Localização</a>
         </div>
@@ -184,7 +184,7 @@
         </section>
 
         <!-- professores homenagem -->
-        <section id="professores-section">
+        <!-- <section id="professores-section">
             <h1 class="titleSVG-align poppinsBold">Professores</h1>
 
             <div class="professoresContainer">
@@ -216,6 +216,31 @@
                         <div class="infos-professor">
                             <p class="txtBtn">Marcelo Alves</p>
                         </div>
+                    </div>
+                </div>
+
+            </div>
+        </section> -->
+
+        <!-- professores homenagem -->
+        <section id="professores-section">
+            <h1 class="titleSVG-align poppinsBold">Professores</h1>
+
+            <div class="professoresContainer-noPic">
+
+                <div class="infoBox-professor-noPic">
+                    <div class="infos-professor">
+                        <p class="txtBtn">Juliana Carvalho</p>
+                    </div>
+                </div>
+                <div class="infoBox-professor-noPic">
+                    <div class="infos-professor">
+                        <p class="txtBtn">Marcos Vinicius</p>
+                    </div>
+                </div>
+                <div class="infoBox-professor-noPic">
+                    <div class="infos-professor">
+                        <p class="txtBtn">Marcelo Alves</p>
                     </div>
                 </div>
 
@@ -266,8 +291,8 @@
                 <p class="poppinsLight">Seções</p>
 
                 <div class="nav-links footerLinks">
-                    <a href="#dataEventos-section">Datas</a>
                     <a href="#projetos">Projetos</a>
+                    <a href="#dataEventos-section">Datas</a>
                     <a href="#professores-section">Professores</a>
                     <a href="#location">Localização</a>
                 </div>
