--- a/pages/index.html
+++ b/pages/index.html
@@ -69,22 +69,17 @@
 
         <!-- projetos -->
         <section id="projetos">
+            <h1 class="projetosTitle poppinsBold">Projetos</h1>
+            <div class="carousel">
 
-            <div id="boxProjControls">
                 <!-- Botão de alternância -->
                 <label class="switch">
                     <input type="checkbox" id="toggleImagesBtn">
                     <span class="slider round"></span>
                 </label>
 
-                <h1 id="projetos-title" class="titleSVG-align poppinsBold">Projetos</h1>
-
                 <span id="dayLabel">Dia1</span>
-            </div>
 
-
-
-            <div class="carousel">
                 <div class="caroussel-container">
                     <input type="radio" name="slide" id="c1" checked>
                     <label for="c1" class="card"></label>
@@ -100,13 +95,10 @@
                     <label for="c6" class="card"></label>
                     <input type="radio" name="slide" id="c7">
                     <label for="c7" class="card"></label>
+                    <input type="radio" name="slide" id="c8">
+                    <label for="c8" class="card"></label>
                 </div>
             </div>
-
-
-
-
-
 
             <div id="fullscreenOverlay" class="fullscreen-overlay">
                 <button id="closeFullscreen" class="close-fullscreen">×</button>
@@ -184,13 +176,23 @@
         </section>
 
         <!-- professores homenagem -->
-        <!-- <section id="professores-section">
+        <section id="professores-section">
             <h1 class="titleSVG-align poppinsBold">Professores</h1>
 
             <div class="professoresContainer">
 
                 <div class="professor">
-                    <img class="imgProfessor" src="../images/templateProfessor.png">
+                    <img class="imgProfessor" src="../images/marcelo.png">
+
+                    <div class="infoBox-professor">
+                        <div class="infos-professor">
+                            <p class="txtBtn">Marcelo Alves</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="professor">
+                    <img class="imgProfessor" src="../images/juliana.png">
 
                     <div class="infoBox-professor">
                         <div class="infos-professor">
@@ -200,7 +202,7 @@
                 </div>
 
                 <div class="professor">
-                    <img class="imgProfessor" src="../images/templateProfessor.png">
+                    <img class="imgProfessor" src="../images/marcos.png">
 
                     <div class="infoBox-professor">
                         <div class="infos-professor">
@@ -209,47 +211,8 @@
                     </div>
                 </div>
 
-                <div class="professor">
-                    <img class="imgProfessor" src="../images/templateProfessor.png">
-
-                    <div class="infoBox-professor">
-                        <div class="infos-professor">
-                            <p class="txtBtn">Marcelo Alves</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </section> -->
-
-        <!-- professores homenagem -->
-        <section id="professores-section">
-            <h1 class="titleSVG-align poppinsBold">Professores</h1>
-
-            <div class="professoresContainer-noPic">
-
-                <div class="infoBox-professor-noPic">
-                    <div class="infos-professor">
-                        <p class="txtBtn">Juliana Carvalho</p>
-                    </div>
-                </div>
-                <div class="infoBox-professor-noPic">
-                    <div class="infos-professor">
-                        <p class="txtBtn">Marcos Vinicius</p>
-                    </div>
-                </div>
-                <div class="infoBox-professor-noPic">
-                    <div class="infos-professor">
-                        <p class="txtBtn">Marcelo Alves</p>
-                    </div>
-                </div>
-
             </div>
         </section>
-
-
-
-
 
         <!-- localização -->
         <section id="location">
