ajuste carrossel pc

--- a/pages/index.html
+++ b/pages/index.html
@@ -80,7 +80,7 @@
 
                 <span id="dayLabel">Dia1</span>
 
-                <div class="caroussel-container">
+                <div class="caroussel-container" id="carrousselIdBase">
                     <input type="radio" name="slide" id="c1" checked>
                     <label for="c1" class="card"></label>
                     <input type="radio" name="slide" id="c2">
