--- a/pages/index.html
+++ b/pages/index.html
@@ -192,7 +192,7 @@
                 </div>
 
                 <div class="professor">
-                    <img class="imgProfessor" src="../images/juliana.png">
+                    <img class="imgProfessor" src="../images/juliana2.png">
 
                     <div class="infoBox-professor">
                         <div class="infos-professor">
